--- a/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Account/CreateUser.cshtml
+++ b/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Account/CreateUser.cshtml
@@ -5,19 +5,44 @@
 }
 
 <h2>CreateUser</h2>
+<div class="row">
+    <div class="col-md-4 col-md-offset-4 col-xs-12 LoginForm">
+        <section id="loginForm">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true);
+                <div>
 
-@using (Html.BeginForm())
-{
-    @Html.ValidationSummary(true)
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.UserName, new { @class = "col-md-4  control-label" })
+                        <div class="col-xs-12">
+                            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.PasswordHash, new { @class = "col-md-4  control-label" })
+                        <div class="col-md-12">
+                            @Html.PasswordFor(m => m.PasswordHash, new { @class = "form-control" })
 
-    @Html.LabelFor(model => model.UserName)
-    @Html.EditorFor(model => model.UserName)
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.GebruikersTypeRol, new { @class = "col-md-4  control-label" })
+                        <div class="col-md-12">
+                            
+                            @Html.DropDownList("GetRole", (SelectList)ViewBag.Roles)
+                        </div>
+                    </div>
+                    
+                    <div class="form-group">
+                        <div class="col-xs-12 col-md-4 col-md-offset-4">
+                            <input type="submit" value="Create" class="btn btn-default" />
+                        </div>
+                    </div>
+                </div>
+            }
+        </section>
+    </div>
+</div>
 
-    @Html.LabelFor(model => model.PasswordHash)
-    @Html.EditorFor(model => model.PasswordHash)
-    
-    @Html.LabelFor(model => model.Email)
-    @Html.EditorFor(model => model.Email)
-
-    <input type="submit" value="create" />
-}
