--- a/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Account/Index.cshtml
+++ b/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Account/Index.cshtml
@@ -1,7 +1,7 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
-
+<p>Hallo: @ViewBag.Name</p>
+@Html.ActionLink("Uitloggen", "Logout", "Account")
