--- a/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Home/Index.cshtml
+++ b/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Home/Index.cshtml
@@ -1,9 +1,48 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Index";
-}
 
-<h2>Index</h2>
-<p>Hallo: @ViewBag.Name</p>
-@Html.ActionLink("Uitloggen","Logout","Account")
+}
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h2></h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3  col-xs-12">
+            <div class="row">
+                <img src="http://lorempixel.com/g/300/200/" />
+            </div>
+            <div class="row">
+                <h4>Ontdek de voordelen</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a>Lees verder</a>
+                </p>
+            </div>
+        </div>
+        <div class="col-md-3 col-md-offset-1 col-xs-12">
+            <div class="row">
+                <img src="http://lorempixel.com/g/300/200/" />
+            </div>
+            <div class="row">
+                <h4>Time management</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a>Lees verder</a>
+                </p>
+            </div>
+        </div>
+        <div class="col-md-3 col-md-offset-1 col-xs-12">
+            <div class="row">
+                <img src="http://lorempixel.com/g/300/200/" />
+            </div>
+            <div class="row">
+                <h4>Meer inzicht</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a>Lees verder</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
 
