--- a/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Productie/ProductieOpgeven.cshtml
+++ b/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Productie/ProductieOpgeven.cshtml
@@ -18,11 +18,11 @@
     <tbody>
         <tr>
             <td>@ViewBag.Date</td>
-           @foreach(m == Model)
-           {
+               @foreach()
+               {
                
-           }
-            <td>@Html.DropDownList("Dagdelen")</td>
+               }
+                <td>@Html.DropDownList("Dagdelen")</td>
             <td><input type="number" value="aantal"</td>
             <td><input type="submit" value="opslaan" /></td>
         </tr>
