--- a/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Productie/Week.cshtml
+++ b/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Productie/Week.cshtml
@@ -22,9 +22,9 @@
 
 <div class="row">
     <div class="col-md-12">
-       <div class="col-md-4 col-xs-12 text-left">@Html.ActionLink("Vorige Week", "week", "Productie", new { deWeek = "1" }, null)</div>        
+       <div class="col-md-4 col-xs-12 text-left">@Html.ActionLink("Vorige Week", "week", "Productie", new { deWeek = "VorigeWeek" }, null)</div>        
         <div class="col-md-4 col-xs-12 text-center">Huidige week: @ViewBag.CurrentWeek</div> 
-        <div class="col-md-4 col-xs-12 text-right">@Html.ActionLink("Volgende Week", "week", "Productie", new { deWeek = "2" }, null)</div> 
+        <div class="col-md-4 col-xs-12 text-right">@Html.ActionLink("Volgende Week", "week", "Productie", new { deWeek = "VolgendeWeek" }, null)</div> 
       
     </div>
 </div>
