--- a/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Productie/ProductieBijstellen.cshtml
+++ b/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Productie/ProductieBijstellen.cshtml
@@ -5,5 +5,9 @@
 
 <h2>Productie Bijstellen</h2>
 
-<p>test zzzzzzzzzzz test </p>
+<div class="alert alert-success" id="succes" style="display: none;" role="alert">uw gegevens worden opgehaald</div>
+<div class="alert alert-danger" id="alert" style="display: none;" role="alert"><p></p></div>
 
+<div class="row">
+    <div class=""
+</div>
