--- a/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Shared/_UserLayout.cshtml
+++ b/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/Shared/_UserLayout.cshtml
@@ -26,7 +26,7 @@
                     <a href="#">Dashboard</a>
                 </li>
                 <li>
-                    @Html.ActionLink("Verwachte productie opgeven", "ProductieOpgeven", "Productie")
+                    @Html.ActionLink("Verwachte productie opgeven", "Week", "Productie")
                 </li>
                 <li>
                     @Html.ActionLink("Verwachte productie bijstellen", "ProductieBijstellen", "Productie")
