--- a/ProductieSysteemV1.0/ProductieSysteemV1.0/Views/Account/Registreren.cshtml
+++ b/ProductieSysteemV1.0/ProductieSysteemV1.0/Views/Account/Registreren.cshtml
@@ -25,7 +25,7 @@
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
-                @Html.ValidationSummary(true);
+                @Html.ValidationSummary(true, null, new { @class = "bg-primary}" });
                 <div>
                     <div class="form-group">
                         @Html.LabelFor(m => m._UserInfo.FirstName, new { @class = "col-md-4  control-label" })
@@ -83,11 +83,10 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.UserName, new { @class = "col-md-4  control-label" })
-                        <div class="col-xs-12">
-                            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                        @Html.LabelFor(m => m.Email, new { @class = "col-md-4  control-label" })
+                        <div class="col-md-12">
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         </div>
-                    </div>
                     <div class="form-group">
                         @Html.LabelFor(m => m.Password, new { @class = "col-md-4  control-label" })
                         <div class="col-md-12">
@@ -103,13 +102,7 @@
 
                         </div>
                     </div>
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.Email, new { @class = "col-md-4  control-label" })
-                        <div class="col-md-12">
-                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-
-
-                        </div>
+                    
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(m => m.userRoles, new { @class = "col-md-4  control-label" })
