--- a/ProductieSysteemV1.0/ProductieSysteemV1.0/Views/Shared/_UserLayout.cshtml
+++ b/ProductieSysteemV1.0/ProductieSysteemV1.0/Views/Shared/_UserLayout.cshtml
@@ -50,6 +50,12 @@
                 <li>
                     @if (User.IsInRole("administrator") || User.IsInRole("veiling"))
                     {
+                        @Html.ActionLink("Telers overzicht", "telers", "Overview")
+                    }                    
+                </li>
+                <li>
+                    @if (User.IsInRole("administrator") || User.IsInRole("veiling"))
+                    {
                         @Html.ActionLink("Gebruiker toevoegen", "registreren", "Account")
                     }
                     
