--- a/ProductieSysteemV1.0/ProductieSysteemV1.0/Views/Shared/_UserLayout.cshtml
+++ b/ProductieSysteemV1.0/ProductieSysteemV1.0/Views/Shared/_UserLayout.cshtml
@@ -61,7 +61,7 @@
                     
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    @Html.ActionLink("Contact", "contact", "Dashboard")
                 </li>
                 <li>
                     @Html.ActionLink("Uitloggen", "Logout", "Account")
