Aii nu gaatie fout...
ddd

--- a/ProductieSysteemV1.0/ProductieSysteemV1.0/Views/Dashboard/Index.cshtml
+++ b/ProductieSysteemV1.0/ProductieSysteemV1.0/Views/Dashboard/Index.cshtml
@@ -5,56 +5,5 @@
    
 }
 
+<h2>Index</h2>
 
-
-<div class="panel panel-default">
-    <div class="panel-heading">Telers glastuinbouw slaan handen ineen na boycot </div>
-    <div class="panel-body">
-        <div class="row">
-            <div class="col-xs-12 col-sm-3">
-                <img class="img-responsive" src="http://media.nu.nl/m/m1mxwqhawsm1_std320.jpg" />
-            </div>
-            <div class="col-xs-12 col-sm-9">
-                <p>Grote Nederlandse telers in de glastuinbouw hebben de handen ineengeslagen om de consumptie van groente en fruit van eigen bodem te promoten, in reactie op de importsancties van Rusland.
-                    Dat maakte de organisatie Samen Sterk, een stichting waarin de telers zich hebben verenigd, bekend.
-                    De stichting bestaat uit de bedrijven RedStar, Looije, Greenco, Veiling Zon, Harvest House, DOOR Partners en Van Nature. Door meer groente en fruit te consumeren kan het wegvallen van de Russische exportmarkt worden gecompenseerd.
-                    Om dit voor elkaar te krijgen 
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading">Telers glastuinbouw slaan handen ineen na boycot </div>
-    <div class="panel-body">
-        <div class="row">
-            <div class="col-xs-12 col-sm-3">
-                <img class="img-responsive" src="http://media.nu.nl/m/m1mxq15a91vk_std320.jpg" />
-            </div>
-            <div class="col-xs-12 col-sm-9">
-                <p>
-                    DEN HAAG - Het speciale Westland Interventieteam (WIT) treft in de glastuinbouw in de regio Rotterdam en Den Haag steeds minder illegale werknemers aan.
-                    Vorig jaar werden bij 14 procent van de controles in de kassen illegale, vaak Bulgaarse, arbeidskrachten aangetroffen. In 2010 stuitte de inspecteurs bij 18 procent van de controles op illegale praktijken en in 2006 ging het nog om 36 procent.
-                    Dat blijkt uit maandag gepubliceerde cijfers van het WIT, waarin onder meer de Inspectie SZW, Belastingdienst, uitkeringsinstituut UWV, politie en gemeenten samenwerken.
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading">Minder illegale arbeid in Westlandse kassen </div>
-    <div class="panel-body">
-        <div class="row">
-            <div class="col-xs-12 col-sm-3">
-                <img class="img-responsive" src="http://media.nu.nl/m/m1mxwe0aqxuh_std320.jpg" />
-            </div>
-            <div class="col-xs-12 col-sm-9">
-                <p>
-                    De kasteelt van bloemen, planten en groenten in de provincie Overijssel is in 2014 licht gestegen ten opzichte van vorig jaar.
-                    De totale oppervlakte aan glastuinbouw in de provincie steeg met 0,9 procent. Dat blijkt uit vrijdag door het Centraal Bureau voor de Statistiek (CBS) gepubliceerde cijfers.
-                    Alleen in Overijssel en Groningen (12,7 procent) groeide de oppervlakte kasteelt. In alle andere provincies werd het afgelopen jaar juist minder verbouwd in kassen.
-                   </p>
-            </div>
-        </div>
-    </div>
-</div>
